--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
     "react-router-dom": "^6.2.2",
+    "reactjs-popup": "^2.0.5",
     "validator": "^13.7.0"
   }
 }
