--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "heroku-postbuild": "npm install && cd client && npm install && npm run build"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.2.4",
     "multer": "^2.0.0-rc.1",
     "node-sass": "^7.0.1",
